<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_1"
    android:orientation="vertical"
    android:paddingStart="12dp"
    android:paddingEnd="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/addBillAddressTips"
            android:textColor="@color/blue"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@string/fullName"
            android:textColor="@color/grey_2"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/nameEdit"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/name"
                android:singleLine="true"
                android:textColor="@color/grey_4"
                android:textColorHint="@color/word_color_6"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/lastNameEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/lastName"
                android:singleLine="true"
                android:textColor="@color/grey_4"
                android:textColorHint="@color/word_color_6"
                android:textSize="14sp" />
        </LinearLayout>

        <View style="@style/line_style" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/country"
            android:textColor="@color/grey_2"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@null"
            android:drawableRight="@mipmap/icon_grey_arrow"
            android:gravity="center_vertical"
            android:hint="@string/pleaseSelect"
            android:onClick="selectCountry"
            android:textColor="@color/grey_4"
            android:textColorHint="@color/word_color_6"
            android:textSize="14sp" />

        <View style="@style/line_style" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/province"
            android:textColor="@color/grey_2"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/province"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@null"
            android:drawableRight="@mipmap/icon_grey_arrow"
            android:gravity="center_vertical"
            android:hint="@string/pleaseSelect"
            android:onClick="selectProvince"
            android:textColor="@color/grey_4"
            android:textColorHint="@color/word_color_6"
            android:textSize="14sp" />

        <View style="@style/line_style" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/city"
            android:textColor="@color/grey_2"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/cityEdit"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/pleaseInputCity"
            android:singleLine="true"
            android:textColor="@color/grey_4"
            android:textColorHint="@color/word_color_6"
            android:textSize="14sp" />

        <View style="@style/line_style" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/postalCode"
            android:textColor="@color/grey_2"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/postalCodeEdit"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/pleaseInputPostalCode"
            android:singleLine="true"
            android:textColor="@color/grey_4"
            android:textColorHint="@color/word_color_6"
            android:textSize="14sp" />

        <View style="@style/line_style" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/address"
            android:textColor="@color/grey_2"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/addressEdit"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/pleaseInputAddress"
            android:singleLine="true"
            android:textColor="@color/grey_4"
            android:textColorHint="@color/word_color_6"
            android:textSize="14sp" />

        <View style="@style/line_style" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/phone"
            android:textColor="@color/grey_2"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/phoneEdit"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/phoneNumbEditHint"
            android:inputType="phone"
            android:singleLine="true"
            android:textColor="@color/grey_4"
            android:textColorHint="@color/word_color_6"
            android:textSize="14sp" />

        <View style="@style/line_style" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/email"
            android:textColor="@color/grey_2"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/emailEdit"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/pleaseInputEmail"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/grey_4"
            android:textColorHint="@color/word_color_6"
            android:textSize="14sp" />

        <View style="@style/line_style" />

        <TextView
            android:id="@+id/save"
            style="@style/button_style_normal"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:enabled="false"
            android:onClick="saveClick"
            android:text="@string/preservation"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>