<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@mipmap/icon_pay_wait" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/wait_handle"
        android:textColor="@color/grey_4"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/complaint_tips"
        android:textColor="@color/grey_2"
        android:textSize="14sp" />

    <View
        style="@style/line_style"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/complaintMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/complaintMoneyUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/moneyUnit"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            style="@style/line_style_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/complaintType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/pay_type"
                android:textColor="@color/grey_2"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/complaintName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:gravity="center"
                android:text="@string/pay_name"
                android:textColor="@color/grey_2"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/complaint_pay_tip"
        android:textColor="@color/grey_4"
        android:textSize="14sp" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="44dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/add_bill_address_bg"
        android:gravity="center"
        android:onClick="cancelOrder"
        android:text="@string/cancel_order"
        android:textColor="@color/grey"
        android:textSize="16sp" />
</LinearLayout>