<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@mipmap/icon_frozen" />

    <TextView
        android:id="@+id/payStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/pay_frozen"
        android:textColor="@color/grey_4"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/payStatusTips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/other_pay_tip"
        android:textColor="@color/grey_2"
        android:textSize="14sp" />

    <View
        style="@style/line_style"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/payClickTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawablePadding="5dp"
        android:text="@string/click_tip_one"
        android:textColor="@color/grey_4"
        android:textSize="12sp"
        app:drawableStartCompat="@mipmap/icon_warn" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="63dp"
        android:text="@string/pay_click_tip"
        android:textColor="@color/grey_2"
        android:textSize="12sp" />
</LinearLayout>