<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_1">

    <LinearLayout
        android:id="@+id/notBalanceLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_tgc_fail" />

        <TextView
            android:id="@+id/tgcBalanceTips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tgc_balance_tips"
            android:textColor="@color/grey_4"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/select_other_pay"
            android:textColor="@color/grey_2"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/payLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tgcBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tgc_balance"
            android:textColor="@color/grey"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/tgcLogo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:src="@mipmap/icon_tgc_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/this_spend"
                android:textColor="@color/red"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textColor="@color/red"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/moneyUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tgcUnit"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/surePay"
            style="@style/button_style_normal"
            android:layout_width="match_parent"
            android:layout_marginStart="63dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="63dp"
            android:enabled="true"
            android:onClick="surePay"
            android:text="@string/surePay" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/paySuccess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/icon_pay_success" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/pay_success"
            android:textColor="@color/grey_4"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/vip_success"
            android:textColor="@color/grey_2"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginStart="63dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="63dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/add_bill_address_bg"
            android:gravity="center"
            android:onClick="backClick"
            android:text="@string/back"
            android:textColor="@color/grey"
            android:textSize="16sp" />
    </LinearLayout>
</FrameLayout>