<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_1"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@mipmap/icon_pay_success" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/trade_success"
        android:textColor="@color/grey_4"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/trade_success_tips"
        android:textColor="@color/grey_2"
        android:textSize="14sp" />

    <View
        style="@style/line_style"
        android:layout_marginTop="20dp" />

    <ImageView
        android:id="@+id/paySuccessTipImg"
        android:layout_width="172dp"
        android:layout_height="140dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/pay_account"
        android:textColor="@color/grey_2"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/paySuccessImage"
            android:layout_width="24dp"
            android:layout_height="24dp" />

        <TextView
            android:id="@+id/paySuccessName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/grey_4"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/paySuccessAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/grey_4"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:onClick="noPaySuccessClick"
        android:padding="10dp"
        android:text="@string/my_not_pay"
        android:textColor="@color/blue"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/add_bill_address_bg"
        android:gravity="center"
        android:onClick="backClick"
        android:text="@string/back"
        android:textColor="@color/grey"
        android:textSize="16sp" />

</LinearLayout>